Fixed height of navbar and gap between menu buttons

--- a/JavaScript/restaurantPage/src/styles.css
+++ b/JavaScript/restaurantPage/src/styles.css
@@ -12,6 +12,11 @@ html {
     font-size: 18px;
 }
 
+body, html {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     font-family: 'Titillium Web', sans-serif;
     line-height: 1.6;
@@ -49,6 +54,7 @@ h2 {
     border: none;
     box-shadow: 0 0 1rem #541212;
     background-color: transparent; /*lightgray*/
+    height: 6.5rem;
 }
 
 #logo-btn {
@@ -70,6 +76,7 @@ h2 {
     box-shadow: 0.1rem 0.1rem 0.2rem #333,
                 0.2rem 0.2rem 0.5rem #333
     ;
+    cursor: pointer;
 }
 
 #logo-btn:active {
@@ -79,9 +86,8 @@ h2 {
 .group-buttons {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .menu-btn {
@@ -114,6 +120,7 @@ h2 {
     padding: 2rem;
     color: #000;
     min-height: calc(100vh - 6.5rem);
+    overflow: hidden;
 }
 
 #home-page {
@@ -124,7 +131,6 @@ h2 {
         background-size: cover;
         background-position: center;
     color: #fff;
-
 }
 
 .reservation-link {
@@ -165,9 +171,21 @@ h2 {
 
     #navbar {
         padding: 1rem;
+        height: 5rem;
     }
 
     /* .page {
         min-height: calc(100vh - 4.5rem);
     } */
+
+    .page {
+        min-height: calc(100vh - 5rem);
+    }
+
+    .group-buttons {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 1rem;
+    }
 } 
